fixed gap and underline

--- a/day5part2/styles.css
+++ b/day5part2/styles.css
@@ -166,13 +166,15 @@ body {
 .form-options label {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 8px;
   color: #666;
 }
 
 .form-options a {
-  color: rgba(0, 0, 0, 1);
-  text-decoration: none;
+  color: black;
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-color: black;
   font-size: 16px;
   font-weight: 500;
 }
@@ -186,7 +188,7 @@ body {
 
 .styled-checkbox {
   appearance: none;
-  border-radius: 4px;
+  border-radius: 8px;
   border: none;
   width: 28px;
   height: 28px;
@@ -208,9 +210,7 @@ body {
   color: white;
 }
 
-.form-options a:hover {
-  text-decoration: underline;
-}
+
 
 .auth-submit-btn {
   background: rgba(0, 0, 0, 0.05);
